fixed contrast errors

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -79,7 +79,7 @@ section.landing-page::before {
 }
 
 .fa-hotel {
-  color: #0070cc;
+  color: rgb(46, 140, 216);
 }
 
 .fa-plane-departure {
@@ -125,7 +125,7 @@ section.landing-page::before {
 }
 
 .wrapper hr {
-  border: 1px soli#0070cc;
+  border: 1px solid rgb(46, 140, 216);
 }
 
 .background-image {
