--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -11,7 +11,7 @@
 }
 
 .button-wrapper > a {
-  color: #0070cc;
+  color: rgb(46, 140, 216);
   font-weight: bold;
 }
 
