--- a/src/components/TripCards/TripCards.css
+++ b/src/components/TripCards/TripCards.css
@@ -74,7 +74,6 @@
   height: 80px;
   width: 315px;
   color: rgb(8, 8, 8);
-  text-shadow: 1px 1px 2px white;
   font-family: 'Fredoka One', Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
