--- a/src/components/TripView/TripView.css
+++ b/src/components/TripView/TripView.css
@@ -50,7 +50,7 @@
   outline: none;
   position: relative;
   font-size: 1.3em;
-  border: 5px solid #0070cc;
+  border: 5px solid rgb(46, 140, 216);
   border-radius: 15px 15px 15px 15px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -60,7 +60,7 @@
 .trip-name {
   font-size: 52px;
   text-decoration: none;
-  color: #0070cc;
+  color: rgb(46, 140, 216);
   text-shadow: 2px 1px 2px rgb(0, 0, 0);
   font-weight: bold;
   text-align: center;
